--- a/assets/touch style.css
+++ b/assets/touch style.css
@@ -22,4 +22,9 @@ h2 {
 }p {
     text-align: center;
     font-size: 30px;
+  }.card {
+    width: 80%;
+    margin: 40px auto;
+    border: 5px solid rgb(101, 167, 117);
+    box-shadow: 5px 10px #888888;
   }
